--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Team project</h1>
-    <h3>Hello</h3>
+    <h2>Hello</h2>
+    <p>jfsdjfhl</p>
 </body>
 </html>
